<resources>
    <string name="app_name">Capivara Poker Replayer</string>
    <string name="progress_title">Loading</string>
    <string name="progress_message">Loading history, please wait…</string>
    <string name="previous_hand">&lt;&lt;</string>
    <string name="previous_action">&lt;</string>
    <string name="next_action">&gt;</string>
    <string name="next_hand">&gt;&gt;</string>
    <string name="open_history">^</string>
    <string name="choose_device">Choose from device</string>
    <string name="choose_dropbox">Choose from Dropbox</string>
    <string name="image_icon_description">Item icon</string>
    <string name="badge_description">Capivara badge</string>
</resources>
